Responsiveness fix on mobile

--- a/punkweb/static/punkweb/css/music-index.scss
+++ b/punkweb/static/punkweb/css/music-index.scss
@@ -23,5 +23,12 @@
 .latestReleases {
   border-top: 1px solid $oc-gray-4;
   padding-top: 1rem;
+}
 
+@media only screen and (max-width: 450px) {
+  .album {
+    &List {
+      justify-content: center;
+    }
+  }
 }
